# trame-surf-seg

surf-seg/: CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg
surf-seg/bundles/desktop/: README.md  create_exe.bat  create_linux.sh  create_mac.sh  run.py
surf-seg/bundles/docker/: README.md
surf-seg/bundles/docker/scripts/: build_image.sh  run_image.sh
surf-seg/bundles/docker/server/: launcher.json
surf-seg/bundles/docker/server/logs/launcher/: e1b168d4-9d32-11ef-8826-0242ac110002.txt
surf-seg/bundles/docker/server/www/: surf-seg.html
surf-seg/bundles/docker/setup/: apps.yml  requirements.txt
surf-seg/examples/jupyter/: show.ipynb
surf-seg/surf_seg/app/: core.py  surf_seg.py
surf-seg/surf_seg/widgets/: surf_seg.py
surf-seg/tests/: test_app.py  test_import.py
surf-seg/vue-components/: package-lock.json  package.json  vite.config.js
surf-seg/vue-components/src/components/: CustomWidget.js  D3Widget.js  index.js
