[metadata]
name = surf-seg
version = 1.0.0
description = surface segmentation
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Jackson Hardee
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    trame-vuetify
    trame-vtk
    trame-deckgl
    # vtk
    pandas
    # numpy
    # altair
    # mpld3
    # plotly
    pydeck

[options.entry_points]
console_scripts =
    surf-seg = surf_seg.app:main
jupyter_serverproxy_servers =
    surf-seg = surf_seg.app.jupyter:jupyter_proxy_info
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
